2002-10-19 garlick
	* Fixded bug in _update_timeout where usecs were not checked for zero
	  when testing if timer is set.
	* Tagged powerman-1-0-12

2002-10-18 garlick
	* Added several new script types and factored code for building scripts
	  in parse.y (now there is one function - makeScriptSec()).
	* Implemented "ping period N" directive in device scripts which
	  enables PING_SCRIPT to run every N seconds.  This works around
	  broken TCP implementations in RPC's (such as Baytech's) which don't
	  send a FIN when they tear down a connection (which would unblock
	  powerman's select call and cause a reconnect).  Configured
	  90 second ping period for Baytech.
	* Changed logic for "all" plug processing.  If _ALL version of
	  script is defined, use that.  If all string "*" is defined, use
	  that.  If neither is defined, use one command per plug.

2002-10-16 garlick
	* Make Action struct private to device.c
	* Move script names to config.h.
	* Merged _match_regex into _match_subexpression.  Removed intermediate
	  regex match data from Interpretation struct (now temporary in 
	  _match_subexpression).
	* Fixed bug where query for N-1 plugs on an N-plug device resulted
	  in N-1 separate queries, each acquiring state for the whole device.
	* Fixed bug where read returned EOF occasionally.  This was a read
	  attempt on a zero length buffer.  It turns out the read buffer was
	  huge and never was compacted.  Reduced buffer size from 64K to 8K.
	* Tagged powerman-1-0-11.

 2002-10-14 garlick
	* Remove RESET_SCRIPT definitions in wti and baytech device files.
	* Got rid of Cluster and Node data structures.
	* Plug state is no longer global - seperate copy for each client cmd.
	* Fixed memory leaks in _create_client/_destroy_client.
	* Trimmed TODO file.
	* Fixed bug where actions could not make progress torward timeout
	  while device is in unconnected state.

2002-10-11 garlick
	* Fix bug in vpcd where empty line would look like EOF on socket.

2002-10-08 garlick