@@ -110,6 +110,8 @@ static void _doubletotv(struct timeval *tv, double val);
 %token TOK_E_STATUS
 %token TOK_B_STATUS_SOFT
 %token TOK_E_STATUS_SOFT
+%token TOK_B_STATUS_TEMP
+%token TOK_E_STATUS_TEMP
 %token TOK_B_ON
 %token TOK_E_ON
 %token TOK_B_ON_ALL
@@ -223,10 +225,13 @@ spec_script	: TOK_B_LOGIN script_list TOK_E_LOGIN {
     $$ = (char *)makeScriptSec($2, PM_LOG_OUT);
 }
 		| TOK_B_STATUS script_list TOK_E_STATUS {
-    $$ = (char *)makeScriptSec($2, PM_UPDATE_PLUGS);
+    $$ = (char *)makeScriptSec($2, PM_STATUS_PLUGS);
 } 
 		| TOK_B_STATUS_SOFT script_list TOK_E_STATUS_SOFT {
-    $$ = (char *)makeScriptSec($2, PM_UPDATE_NODES);
+    $$ = (char *)makeScriptSec($2, PM_STATUS_NODES);
+}
+		| TOK_B_STATUS_TEMP script_list TOK_E_STATUS_TEMP {
+    $$ = (char *)makeScriptSec($2, PM_STATUS_TEMP);
 }
 		| TOK_B_ON script_list TOK_E_ON {
     $$ = (char *)makeScriptSec($2, PM_POWER_ON);
